deployment/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nova-core-service
  labels:
    app: nova-core
spec:
  type: ClusterIP
  selector:
    app: nova-core
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: nova-core-nodeport
  labels:
    app: nova-core
spec:
  type: NodePort
  selector:
    app: nova-core
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
      protocol: TCP
      name: http
